[package]
edition = "2021"
name = "hello-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
reqwest = { version = "0.12.15", features = ["blocking"] }

napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "anyhow",
] }
napi-derive = "2.12.2"
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
chrono = "0.4.41"
anyhow = "1.0.98"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
